Added footer, likes, user greeting, and localized app title.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,6 +1,14 @@
 {
+  "app": {
+    "title": "قهوة الذواقة الدولية"
+  },
   "nav": {
     "home": "الرئيسية",
     "about": "نبذة عنا"
+  },
+  "user_greeting": "مرحبا {name}",
+  "footer": "بنيت بواسطة Vue و Vue I18n{0}مدعوم من كمية قهوة مبالغ فيها",
+  "card": {
+    "likes": "لا توجد ❤️ إلى الآن 😕 | شخص {n} ❤️ هذا | شخصان ❤️ هذا | {n} أشخاص ❤️ هذا | {n} شخص ❤️ هذا | {n} شخص ❤️ هذا "
   }
 }
