Added date and number formatting

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -9,6 +9,7 @@
   "user_greeting": "مرحبا {name}",
   "footer": "بنيت بواسطة Vue و Vue I18n{0}مدعوم من كمية قهوة مبالغ فيها",
   "card": {
+    "added": "تم إضافته",
     "likes": "لا توجد ❤️ إلى الآن 😕 | شخص {n} ❤️ هذا | شخصان ❤️ هذا | {n} أشخاص ❤️ هذا | {n} شخص ❤️ هذا | {n} شخص ❤️ هذا "
   }
 }
