--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,7 @@
   "user_greeting": "Hello, {name}",
   "footer": "Built with Vue and Vue I18n{0}Powered by an excessive amount of coffee",
   "card": {
+    "added": "Added",
     "likes": "Nobody ❤️ this yet 😕 | {n} person ❤️ this | {n} people ❤️ this"
   }
 }
